--- a/22-wrap-up.html
+++ b/22-wrap-up.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Tidy text and sentiment analysis</title>
+<title>Wrap up</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -309,7 +309,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Tidy text and sentiment analysis</h1>
+<h1 class="title toc-ignore">Wrap up</h1>
 
 </div>
 
@@ -317,20 +317,14 @@ $(document).ready(function () {
 <ol style="list-style-type: decimal">
 <li><strong>Announcements</strong>:
 <ul>
-<li>Lab times:
-<ul>
-<li>Monday 3-4PM, Genome Cafe</li>
-<li>Friday 10-11AM, Biostatistics Library</li>
-</ul></li>
-<li><strong>You should be very close to having a collected data set</strong></li>
-<li>Please come with a step-by-step analysis plan even if you haven’t done it yet</li>
+<li>Projects!</li>
+<li>Final version due tomorrow by 5pm (but I’m not watching the clock)</li>
 </ul></li>
 <li><strong>Assignment</strong>:
 <ul>
-<li>DataCamp: Shakespeare gets Sentimental and Tweets across the United States</li>
-<li>Due Sep 22th by 11:59PM</li>
+<li>Just finish up those projects!</li>
 </ul></li>
-<li><strong>Slides</strong>: <a href="http://jtleek.com/advdatasci/slides/07-tidy-text-and-sentiment-analysis-slides.html" class="uri">http://jtleek.com/advdatasci/slides/07-tidy-text-and-sentiment-analysis-slides.html</a></li>
+<li><strong>Slides</strong>: <a href="https://docs.google.com/presentation/d/18knw2Q5ZlczECLApt5VOqGAZZJ9XwLU2zxDD17LdzWw/edit?usp=sharing" class="uri">https://docs.google.com/presentation/d/18knw2Q5ZlczECLApt5VOqGAZZJ9XwLU2zxDD17LdzWw/edit?usp=sharing</a></li>
 </ol>
 
 
